# dmpower2

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  appicon.rc  dmpower2config.h.in  dmpowerconfig.h.in
dmpower/: CMakeLists.txt  charts.cpp  gen_insult.cpp  gen_name.cpp  gen_reward.cpp  globalfuncts.cpp  main.cpp  menu.cpp
dmpower2/: CMakeLists.txt  charts.cpp  dmpowerconfig.h.in  gen_reward.cpp  globalfuncts.cpp  globalfuncts.h  main.cpp  menu.cpp  terminal_colors.h
src/: charts.cpp  gen_name.cpp  gen_reward.cpp  main.cpp  save.cpp
tests/: CMakeLists.txt  main.cpp
